[gd_scene load_steps=7 format=3 uid="uid://dq6cpekqayxwn"]

[ext_resource type="Texture2D" uid="uid://bfm7oa7hojrtx" path="res://images/hood1.png" id="1_yhyry"]
[ext_resource type="BitMap" uid="uid://bvd2ojqdfp3ch" path="res://images/hood1bitmap.png" id="2_8eojv"]
[ext_resource type="Script" path="res://scripts/hood.gd" id="3_5k4mq"]
[ext_resource type="Texture2D" uid="uid://6ckjybxb5kmp" path="res://images/house.png" id="3_8rroe"]
[ext_resource type="Texture2D" uid="uid://cntfunlqin0bm" path="res://images/job.png" id="4_aomlb"]
[ext_resource type="Texture2D" uid="uid://dvgtucb3eab60" path="res://images/company.png" id="5_vg5rj"]

[node name="Hood" type="TextureButton"]
offset_right = 633.0
offset_bottom = 1384.0
scale = Vector2(0.35, 0.35)
texture_normal = ExtResource("1_yhyry")
texture_click_mask = ExtResource("2_8eojv")
script = ExtResource("3_5k4mq")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="NameLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 60
text = "City Name"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="rentedIcon" type="TextureRect" parent="CenterContainer/VBoxContainer/HBoxContainer"]
visible = false
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
texture = ExtResource("3_8rroe")
expand_mode = 1

[node name="jobIcon" type="TextureRect" parent="CenterContainer/VBoxContainer/HBoxContainer"]
visible = false
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
texture = ExtResource("4_aomlb")
expand_mode = 1

[node name="companyIcon" type="TextureRect" parent="CenterContainer/VBoxContainer/HBoxContainer"]
visible = false
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
texture = ExtResource("5_vg5rj")
expand_mode = 1
